objects/School__c/School__c.object-meta.xml
<CustomObject>
    <description>Table to hold School related details</description>
    <label>School</label>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>School</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>