objects/School__c/fields/About_Us__c.field-meta.xml
<CustomField>
    <fullName>About_Us__c</fullName>
    <label>About Us</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>