objects/School__c/fields/Age_of_School__c.field-meta.xml
<CustomField>
    <fullName>Age_of_School__c</fullName>
    <formula>YEAR(TODAY())  -  YEAR(Date_of_Establishment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of School</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>