objects/School__c/fields/LinkendIn__c.field-meta.xml
<CustomField>
    <fullName>LinkendIn__c</fullName>
    <label>LinkendIn</label>
    <type>Url</type>
</CustomField>