objects/School__c/fields/No_of_Classes__c.field-meta.xml
<CustomField>
    <fullName>No_of_Classes__c</fullName>
    <label>No of Classes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>