objects/School__c/fields/No_of_Students__c.field-meta.xml
<CustomField>
    <fullName>No_of_Students__c</fullName>
    <label>No of Students</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>