objects/School__c/fields/Number_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Students__c</fullName>
    <label>Number of Students</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>