objects/School__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Establishment__c</columns>
    <columns>Number_of_Classes__c</columns>
    <columns>Number_of_Students__c</columns>
    <columns>Number_of_Teachers__c</columns>
    <columns>Website__c</columns>
    <columns>LinkendIn__c</columns>
    <columns>No_of_Classes__c</columns>
    <columns>No_of_Students__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>